--- a/app/src/main/res/layout/item_ricky_and_morty.xml
+++ b/app/src/main/res/layout/item_ricky_and_morty.xml
@@ -15,14 +15,14 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:id="@+id/image"
             android:scaleType="fitXY" />
         <TextView
+            android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/title"
             android:textColor="@android:color/black"
             android:textSize="21dp"
             android:text="Title"
@@ -30,10 +30,9 @@
             android:layout_marginRight="10dp"/>
 
         <TextView
+            android:id="@+id/genderTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/desc"
-
             android:text="Desc"
             android:textSize="18dp"
             android:layout_marginLeft="14dp"
