--- a/app/src/main/res/layout/activity_ricky_morty_list.xml
+++ b/app/src/main/res/layout/activity_ricky_morty_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presenter.rickyandmorty.HomeActivity">
+    tools:context=".presenter.rickyandmorty.RickyMortyListActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/progress_layout"
